# sfmc_scraper

./: .gitignore  README.md  config.yaml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  post-install.sh
environments/: Dockerfile
src/sfmc_scraper/: __main__.py  crawling.py  page_loading.py  page_loading.pyi  parsing.py  parsing.pyi  scrap_sfmc_docs.py  utils.py
tests/: __init__.py
